<resources>
    <string name="app_name">Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settingsTextAccount">Аккаунт</string>
    <string name="settings_default_number">+79041770679</string>
    <string name="settings_default_name">Никита</string>
    <string name="settings_label_phone_number_change">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_default_login">triplesix</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_tittle_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_enter_name">Введите имя</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_default_status">online</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_hint_input_bio">bio</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
</resources>